<resources>
    <string name="app_name">C&amp;D FoodHub </string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_name">Name (Min. 3 characters)</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="home">Home</string>
    <string name="offers">New Offers</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Me</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log out</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="filter">Filter</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="profile_details">Your Profile Details are listed below:</string>
    <string name="go_to_cart">Proceed to Cart</string>
    <string name="confirm_order">Place Order</string>
    <string name="action_search">Search</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="favorites">Favorite Restaurants</string>
    <string name="channel_name">Android Training</string>
    <string name="channel_description">This notification confirms that the order is placed</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="empty_cart">Your cart is currently empty</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>
    <string name="faq_answer_one">A.1 Chirag Bargoojar and Dhruv Maindola build this app
        using Kotlin+Java and it takes us 6 weeks to learn and 2-3 weeks to build this app from scratch.
    </string>
    <string name="faq_answer_two">A.2 The purpose of this app to put our learned knowledge towards an app which helps
        both of us to achieve our goal to become android app developers.
    </string>
    <string name="faq_answer_four">A.4 Dhruv Maindola build all the XML/UI layout and design the app cause
        he is very creative while Chirag Bargoojar build the backend working of app and work on creating good user experience
    </string>
    <string name="faq_answer_three">A.3 We get the idea while we are ordering our food from Zomato.
        We both came to know that its really easy to build apps like this so we started learning. </string>
    <string name="faq_answer_five">A.5 There are 7 activities, 4 adapter classes,20-21 XML layouts(UI), 3 database files
        and 2 interfaces for database, 6 fragments and some other files for validation check and internet connection.
    </string>
    <string name="faq_answer_six">A.6 We add in-build feature in android for connecting to internet that is
        ConnectionManager class which is used to connect and check if internet is working. And about data,
        data is coming from an open source API(Application programming interface) which have the name of restaurant and menu of restaurant.
    </string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="email">Email Address</string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter the received OTP below</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="new_password">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your order has been successfully placed!</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="dummy_date">20/12/2018</string>
    <array name="filters">
        <item>Cost(Low to High)</item>
        <item>Cost(High to Low)</item>
        <item>Rating</item>
    </array>

</resources>
