<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FAQFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.1 Who build this app?"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_one"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.2 What is the purpose of this app?"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_two"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.3 How we get the idea about this particular app?"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_three"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.4 How we split our work for this project?"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_four"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.5 About the contents of app"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_five"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.6 How is app connected to internet and from where app getting it's data"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_six"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>

    </ScrollView>
</FrameLayout>